Fixes the text-align of the last cell in asset table

--- a/frontend/src/css/styles.scss
+++ b/frontend/src/css/styles.scss
@@ -59,13 +59,7 @@ table {
    
    td {
       text-align: center;
-      vertical-align: middle;
-      
-      &:last-child {
-         font-size: 0.95em;
-         line-height: 1.4;
-         text-align: left;
-      }
+      vertical-align: middle;    
    }
    
    th { 
